compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@empty_impl.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl Int32 {}\")"
---
SOURCE_FILE@0..13
  IMPL@0..13
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..11
      PATH@5..11
        PATH_TYPE@5..11
          NAME@5..10
            IDENT@5..10 "Int32"
          WHITESPACE@10..11 " "
    LEFT_BRACE@11..12 "{"
    RIGHT_BRACE@12..13 "}"
