compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@field.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"\n        struct Foo {\n            x: Int32 = 0;\n        }\")"
---
SOURCE_FILE@0..57
  WHITESPACE@0..9 "\n        "
  STRUCT@9..57
    STRUCT_KW@9..15 "struct"
    WHITESPACE@15..16 " "
    NAME@16..19
      IDENT@16..19 "Foo"
    WHITESPACE@19..20 " "
    LEFT_BRACE@20..21 "{"
    WHITESPACE@21..34 "\n            "
    FIELD@34..47
      NAME@34..35
        IDENT@34..35 "x"
      COLON@35..36 ":"
      WHITESPACE@36..37 " "
      NAMED_TYPE@37..43
        PATH@37..43
          PATH_TYPE@37..43
            NAME@37..42
              IDENT@37..42 "Int32"
            WHITESPACE@42..43 " "
      ASSIGN@43..44 "="
      WHITESPACE@44..45 " "
      LIT_EXPR@45..46
        INTEGER_LIT@45..46
          INTEGER_LIT@45..46 "0"
      SEMICOLON@46..47 ";"
    WHITESPACE@47..56 "\n        "
    RIGHT_BRACE@56..57 "}"
