compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@field_no_default.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"\n        struct Foo {\n            x: Int32;\n        }\")"
---
SOURCE_FILE@0..53
  WHITESPACE@0..9 "\n        "
  STRUCT@9..53
    STRUCT_KW@9..15 "struct"
    WHITESPACE@15..16 " "
    NAME@16..19
      IDENT@16..19 "Foo"
    WHITESPACE@19..20 " "
    LEFT_BRACE@20..21 "{"
    WHITESPACE@21..34 "\n            "
    FIELD@34..43
      NAME@34..35
        IDENT@34..35 "x"
      COLON@35..36 ":"
      WHITESPACE@36..37 " "
      NAMED_TYPE@37..42
        PATH@37..42
          PATH_TYPE@37..42
            NAME@37..42
              IDENT@37..42 "Int32"
      SEMICOLON@42..43 ";"
    WHITESPACE@43..52 "\n        "
    RIGHT_BRACE@52..53 "}"
