compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@invalid_impl_name.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl 1A {}\")"
---
SOURCE_FILE@0..9
  IMPL@0..5
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
  IDENT@5..6 "A"
  WHITESPACE@6..7 " "
  LEFT_BRACE@7..8 "{"
  RIGHT_BRACE@8..9 "}"

expected type@5..6
expected kind LEFT_BRACE@6..7
invalid top-level item@6..7
