compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@property_in_impl.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_err(\"impl Foo { pub x: Bar; }\")"
---
PropertyInImpl {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "impl Foo { pub x: Bar; }",
        package: PackageId(
            0,
        ),
    },
    range: 15..16,
}
