compiler/lume_parser/src/snapshots/lume_parser__tests__struct_snapshots@pub_field.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"\n        struct Foo {\n            pub x: Int32 = 1;\n        }\")"
---
SOURCE_FILE@0..61
  WHITESPACE@0..9 "\n        "
  STRUCT@9..61
    STRUCT_KW@9..15 "struct"
    WHITESPACE@15..16 " "
    NAME@16..19
      IDENT@16..19 "Foo"
    WHITESPACE@19..20 " "
    LEFT_BRACE@20..21 "{"
    WHITESPACE@21..34 "\n            "
    FIELD@34..51
      VISIBILITY@34..38
        PUB_KW@34..37 "pub"
        WHITESPACE@37..38 " "
      NAME@38..39
        IDENT@38..39 "x"
      COLON@39..40 ":"
      WHITESPACE@40..41 " "
      NAMED_TYPE@41..47
        PATH@41..47
          PATH_TYPE@41..47
            NAME@41..46
              IDENT@41..46 "Int32"
            WHITESPACE@46..47 " "
      ASSIGN@47..48 "="
      WHITESPACE@48..49 " "
      LIT_EXPR@49..50
        INTEGER_LIT@49..50
          INTEGER_LIT@49..50 "1"
      SEMICOLON@50..51 ";"
    WHITESPACE@51..60 "\n        "
    RIGHT_BRACE@60..61 "}"
