compiler/lume_parser/src/snapshots/lume_parser__tests__switch_snapshots@missing_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"switch a { a => b c => d }\")"
---
SOURCE_FILE@0..26
  EXPR_STMT@0..26
    SWITCH_EXPR@0..26
      SWITCH_KW@0..6 "switch"
      VARIABLE_EXPR@6..8
        WHITESPACE@6..7 " "
        NAME@7..8
          IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..17
        PAT_IDENT@11..12
          NAME@11..12
            IDENT@11..12 "a"
        WHITESPACE@12..13 " "
        BIG_ARROW@13..15 "=>"
        VARIABLE_EXPR@15..17
          WHITESPACE@15..16 " "
          NAME@16..17
            IDENT@16..17 "b"
      WHITESPACE@17..18 " "
      IDENT@18..19 "c"
      WHITESPACE@19..20 " "
      BIG_ARROW@20..22 "=>"
      WHITESPACE@22..23 " "
      IDENT@23..24 "d"
      WHITESPACE@24..25 " "
      RIGHT_BRACE@25..26 "}"

expected COMMA@18..19
